<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Your Wellbeing</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="cont">Continue</string>
    <string name="txv">TextView</string>
    <string name="morning_snack">Morning Snack</string>
    <string name="breakfast">Breakfast</string>
    <string name="countstars">***</string>
    <string name="hint1">1</string>
    <string name="lunch">Lunch</string>
    <string name="evening_snack">Evening Snack</string>
    <string name="dinner">Dinner</string>
    <string name="calculate">Calculate</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="your">Your</string>
    <string name="wellbeing">Wellbeing</string>
    <string-array name="genderslist">
        <item>Select*</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="agelist">
        <item>Select*</item>
        <item tools:ignore="TypographyDashes">14-18</item>
        <item tools:ignore="TypographyDashes">19-30</item>
        <item tools:ignore="TypographyDashes">31-50</item>
        <item>51+</item>
    </string-array>
    <string-array name="lifestylelist">
        <item>Select*</item>
        <item>Sedentary</item>
        <item>Moderately Active</item>
        <item>Active</item>
    </string-array>

</resources>
